# Py_Xen_SCLC

./: .gitignore  README.md  pyproject.toml  xen_config.py
.github/ISSUE_TEMPLATE/: analysis_issue.md  analysis_question.md  code_improvements.md
all_data/xen_data/: CellTypist_Chan2021_CxG_5k_model.pkl  description.md  xen_5k_panel.txt
analyses/01_package_exploration/scripts/: anndata.py  (+4 more)
job_logs/: 23169_read_write4929302.err  23169_read_write4929331.err  23169_read_write4929337.err  23169_read_write4936907.err  23169_read_write4937068.err  23169_read_write4937205.err  23169_read_write4937412.err  23169_read_write4938877.err  23169_read_write4938877.out  SCLC_xen_pp5049827.err  SCLC_xen_pp5051239.err  SCLC_xen_pp5057043.out  anndata_concat_filter4955322.err  anndata_concat_filter4955366.err  anndata_concat_filter4955366.out  anndata_concat_filter4955631.err  anndata_concat_filter4955883.err  description.md  qc_pp_leid5114633.out  qc_pp_leid5116034.out  qc_pp_umap_leid5071207.err  qc_pp_umap_leid5071630.out  qc_pp_umap_leid5091829.err  qc_pp_umap_leid5091829.out  single_pp_indiv_samples5139875.err  single_pp_indiv_samples5139875.out  single_pp_indiv_samples5139882.err  single_pp_indiv_samples5139883.err  single_pp_indiv_samples5139883.out  single_pp_indiv_samples5140811.err  single_pp_indiv_samples5140811.out  single_pp_indiv_samples5271725.err  single_pp_indiv_samples5271725.out  single_pp_indiv_samples5286485.err  single_pp_indiv_samples5286485.out
jobs_logs/: description.md
pyxenium/: commons.py  plot_utils.py  xen_config.py
slurm_jobs/: 23169_read_write.sh
(+51 files in other folders)
